--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -2,28 +2,28 @@ app:
   version: '1.0.0'
   port: 9000
   moment:
-    format: 'DD/MM/yyyy HH:mm:ss'
-    tz: 'America/Bogota'
+    format: ''
+    tz: ''
 
 logging:
   level: info
   directory: logs/
   hostnameAsFileName: false
-  filename: apitransaction.log
+  filename: app.log
   transport:
-    console: true
+    console: false
     file: false
 
 db:
   yapechallenge:
     mongo: 
-      url: 127.0.0.1:27017
-      database: yapechallenge
+      url: ''
+      database: ''
       collection:
-        transactions: transactions
+        transactions: ''
 
 kafka:
-  url: localhost
+  url: ''
   port: 9092
   bindings:
     topicName:
